[package]
name = "vqf-rs"
description = "A `no-std`, dependency-free port of VQF sensor fusion algorithm for IMUs."
repository = "https://github.com/vgskye/vqf-rs"
categories = ["algorithms", "mathematics", "science::robotics", "no-std::no-alloc"]
keywords = ["imu", "sensor-fusion", "vqf"]
authors = ["Skye <me@skye.vg>"]
version = "0.1.1"
edition = "2021"
license = "MIT"

[features]
default = ["std", "motion-bias-estimation"]
std = []
libm = ["dep:libm"]
f32 = []
motion-bias-estimation = []

[dependencies]
libm = { version = "0.2.8", optional = true }
